--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.1.0",
     "knex": "^0.21.6",
+    "nodemon": "^2.0.6",
     "pg": "^8.4.1"
   }
 }
