--- a/package.json
+++ b/package.json
@@ -17,12 +17,17 @@
   },
   "homepage": "https://github.com/bleunggithub/TravelApp#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
     "express-handlebars": "^5.1.0",
+    "express-session": "^1.17.1",
     "knex": "^0.21.6",
     "nodemon": "^2.0.6",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pg": "^8.4.2"
   }
 }
