--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "knex": "^0.21.6",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
