--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Team: Betty, Bibek, Curtis",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -25,7 +26,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
     "knex": "^0.21.6",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
